# cis6930sp26-assignment2

./: .env.example  .gitignore  COLLABORATORS.md  README.md  chunker.py  evaluate.py  generator.py  index.py  pyproject.toml  query.py  run_evaluation.py  vectorstore.py
.github/workflows/: pytest.yml
papers/: .gitkeep
tests/: test_chunker.py  test_evaluate.py  test_generator.py  test_vectorstore.py
